--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node index",
-    "start" "node index"
+    "start": "node index"
   },
   "keywords": [
     "jallali"
@@ -13,7 +13,8 @@
   "author": "mj.yahaghi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
-    "moment": "^2.17.1"
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "moment-jalaali": "^0.10.0"
   }
 }
